--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,42 +1,98 @@
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    min-height: 90px;
-}
-  
-.nav-logo-container {
-    max-width: 120px;
-    max-height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-  
-.navbar-links-container a {
-    margin-right: 3rem;
-    text-decoration: none;
-    color: black;
-    font-size: 1.1rem;
-    font-weight: 600;
+@media screen and (min-width: 950px) {
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        min-height: 90px;
+    }
+    
+    .nav-logo-container {
+        max-width: 120px;
+        max-height: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .navbar-links-container a {
+        margin-right: 3rem;
+        text-decoration: none;
+        color: black;
+        font-size: 1.1rem;
+        font-weight: 600;
+    }
+
+    .navbar-menu-container {
+        display: none;
+    }
+
+    .primary-button {
+        padding: 0.9rem 1.75rem;
+        background-color: rgb(47, 148, 148);
+        outline: none;
+        border: none;
+        border-radius: 5rem;
+        font-size: 1.1rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+    
+    .primary-button:hover {
+        background-color: rgb(93, 94, 94);
+    }
 }
 
-.navbar-menu-container {
-    display: none;
-}
+@media screen and (max-width: 950px) {
+    .container {
+        display: inline-block;
+        cursor: pointer;
+    }
+      
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+      
+    .change .bar1 {
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+      
+    .change .bar2 {opacity: 0;}
+      
+    .change .bar3 {
+        transform: translate(0, -11px) rotate(45deg);
+    }
+      
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+    
+    .dropdown-content {
+        display: block;
+        position: absolute;
+        left: -1rem;
+        top: -1rem;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    
+    .dropdown-content a {background-color: #ddd;}
 
-.primary-button {
-    padding: 0.9rem 1.75rem;
-    background-color: rgb(47, 148, 148);
-    outline: none;
-    border: none;
-    border-radius: 5rem;
-    font-size: 1.1rem;
-    font-weight: 600;
-    cursor: pointer;
-    transition: 0.3s;
-}
-  
-.primary-button:hover {
-    background-color: rgb(93, 94, 94);
+    nav {
+        display: none;
+    }
 }
