--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,3 +13,20 @@
       
     </div>
 </nav>
+@if(!abriuMenuHamburguer) {
+  <div class="container"  (click)="manageMenu()">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div>
+}
+@if(abriuMenuHamburguer) {
+  <div class="dropdown" (click)="manageMenu()" (blur)="manageMenu()" id="menu">
+    <div class="dropdown-content">
+      <a href="#conteudo">Home</a>
+      <a href="#sobre">Sobre Nós</a>
+      <a href="#work">Nosso Trabalho</a>
+      <a href="#evaluation">Avaliação</a>
+    </div>
+  </div>
+}
