--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <app-about id="sobre" />
   <app-work id="work" />
   <app-evaluation id="evaluation" />
-  <app-footer class="row"/>
+  <app-footer/>
 </div>
 
 <router-outlet />
