--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -51,6 +51,7 @@
         flex: 1;
         display: table;
         margin: 0px auto;
+        justify-self: center;
     }
     .home-primary-image img {
         width: 360px;
