--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -56,7 +56,7 @@
 @media screen and (max-width: 950px) {
     .about-section-container {
         position: relative;
-        display: inline-block;
+        display: block;
         align-items: center;
     }
       
@@ -78,6 +78,7 @@
         font-weight: 700;
         color: rgb(53, 126, 126);
         font-size: 3rem;
+        text-align: center;
     }
       
     .about-button-container {
