--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -75,12 +75,13 @@
     .dropdown-content {
         display: block;
         position: absolute;
-        left: -1rem;
+        left: -2rem;
         top: -1rem;
-        background-color: #f1f1f1;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        background-color: #318a8a;
+        min-width: 225px;
+        box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.3);
         z-index: 1;
+        border-radius: 5px !important;
     }
     
     .dropdown-content a {
@@ -90,8 +91,14 @@
         display: block;
     }
     
-    .dropdown-content a {background-color: #ddd;}
+    .dropdown-content a {background-color: #ffffff;}
 
+    .dropdown-content a:hover{
+        color: #318a8a;
+    }
+    .dropdown-content a:active{
+        color: #318a8a;
+    }
     nav {
         display: none;
     }
