tentativa de adição de evento hover

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
 }
 @if(abriuMenuHamburguer) {
   <div class="dropdown" (click)="manageMenu()" (blur)="manageMenu()" id="menu">
-    <div class="dropdown-content">
+    <div id="listdropdown" class="dropdown-content">
       <a href="#conteudo">Home</a>
       <a href="#sobre">Sobre Nós</a>
       <a href="#work">Nosso Trabalho</a>
