--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -89,15 +89,15 @@
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        background-color: #ffffff;
     }
-    
-    .dropdown-content a {background-color: #ffffff;}
 
     .dropdown-content a:hover{
-        color: #318a8a;
+        background-color: #318a8a !important;
     }
+
     .dropdown-content a:active{
-        color: #318a8a;
+        background-color: #318a8a;
     }
     nav {
         display: none;
