mudança comportamento da tela

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -73,10 +73,10 @@
     }
     
     .dropdown-content {
-        display: block;
+        display: none;
         position: absolute;
-        left: -2rem;
-        top: -1rem;
+        left: -4rem;
+        top: -3rem;
         background-color: #318a8a;
         min-width: 225px;
         box-shadow: 10px 5px 5px 0px rgba(0,0,0,0.3);
@@ -99,6 +99,7 @@
     .dropdown-content a:active{
         background-color: #318a8a;
     }
+
     nav {
         display: none;
     }
