--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -10,7 +10,7 @@
                 euismod ac dui.
             </p>
             <button class="secondary-button">
-                Fale no whatsapp
+                <a href={{urlWhatsApp}} target='_blank'>Fale no whatsapp</a>
             </button>
             <p class="primary-text">
                 Nulla ut ligula vel libero condimentum accumsan nec ac sem. Integer
