--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -31,6 +31,12 @@
     justify-content: center;
     align-items: flex-start;
 }
+   
+.secondary-button a {
+    color: black;
+    text-decoration: none;
+}
+
 
 @media screen and (max-width: 950px) {
     .home-banner-container {
