correçao de css

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,4 +1,12 @@
 @media screen and (min-width: 950px) {
+    .container {
+        display: none;
+    }
+    
+    .dropdown {
+        display: none;
+    }
+
     nav {
         display: flex;
         align-items: center;
