--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,23 +13,17 @@
 
     <div class="footer-section-two">
       <div class="footer-section-colums">
-        <span>Qualidade</span>
-        <span>Ajuda</span>
-        <span>Nossa Marca</span>
-        <span>Carreira</span>
-        <span>Avaliação</span>
-        <span>Nosso Trabalho</span>
+        <a href="#work">Nosso Trabalho</a>
+        <a href="#evaluation">Avaliação</a>
       </div>
       <div class="footer-section-colums">
-        <span [textContent]="'62-99335-7679'"></span>
-        <span [textContent]="'62-99317-2731'"></span>
-        <span [textContent]="'Flash@tech.com'"></span>
-        <span [textContent]="'SEO@tech.com'"></span>
+        <a href={{urlWhatsAppAndre}} target='_blank'>{{celularAndre}}</a>
+        <a href={{urlWhatsAppRamiro}} target='_blank'>{{celularRamiro}}</a>
       </div>
 
       <div class="footer-section-colums">
-        <span>Termos & Condições</span>
-        <span>Politica de Privacidade</span>
+        <a href="#">Termos & Condições</a>
+        <a href="#">Política de Privacidade</a>
       </div>
     </div>
 </div>
