--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,10 +15,10 @@
         faucibus orci luctus et
       </p>
       <div class="about-button-container">
-        <button class="secondary-button">Leia Mais</button>
+        <!--<button class="secondary-button">Leia Mais</button>
         <button class="watch-video-button">
             Assista nosso video
-        </button>
+        </button>-->
       </div>
     </div>
     <div class="about-background-image-container">
