configuração das rotas

--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,10 +1,10 @@
-.home-banner-container {
+.content-banner-container {
     position: relative;
     display: flex;
     padding-top: 4rem;
 }
 
-.home-bannerImage-container {
+.content-bannerImage-container {
     position: absolute;
     top: -100px;
     right: -150px;
@@ -12,19 +12,19 @@
     max-width: 100%;
 }
 
-.home-image-section {
+.content-image-section {
     flex: 1;
     display: flex;
 }
 
-.home-primary-image img {
+.content-primary-image img {
     width: 750px;
     height: 640px;
     object-fit: cover;
     margin-left: 80px;
 }
 
-.home-text-section {
+.content-text-section {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -39,13 +39,13 @@
 
 
 @media screen and (max-width: 950px) {
-    .home-banner-container {
+    .content-banner-container {
         position: relative;
         display: block;
         padding-top: 4rem;
     }
 
-    .home-bannerImage-container {
+    .content-bannerImage-container {
         position: absolute;
         top: -100px;
         right: -150px;
@@ -53,20 +53,20 @@
         max-width: 100%;
     }
     
-    .home-image-section {
+    .content-image-section {
         flex: 1;
         display: table;
         margin: 0px auto;
         justify-self: center;
     }
-    .home-primary-image img {
+    .content-primary-image img {
         width: 360px;
         height: 400px;
         object-fit: cover;
         margin-left: 0px;
     }
     
-    .home-text-section {
+    .content-text-section {
         flex: 1;
         display: flex;
         flex-direction: column;
