--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,7 @@
-<div class="home-container">
-    <div class="home-banner-container">
-        <div class="home-bannerImage-container"></div>
-        <div class="home-text-section">
+<div class="content-container">
+    <div class="content-banner-container">
+        <div class="content-bannerImage-container"></div>
+        <div class="content-text-section">
             <h1 class="primary-heading">Lorem ipsum dolor sit amet</h1>
             <p class="primary-text">
                 Phasellus fringilla ligula et lectus hendrerit, sed mattis Tellus
@@ -17,8 +17,8 @@
                 molestie sed mauris eu consectetur.
             </p>
         </div>
-        <div class="home-image-section">
-            <div class="home-primary-image">
+        <div class="content-image-section">
+            <div class="content-primary-image">
                 <img src="assets/img/banner.png" alt="flash" />
             </div>
         </div>
