--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,13 +17,13 @@
         <a href="#evaluation">Avaliação</a>
       </div>
       <div class="footer-section-colums">
-        <a href={{urlWhatsAppAndre}} target='_blank'>{{celularAndre}}</a>
-        <a href={{urlWhatsAppRamiro}} target='_blank'>{{celularRamiro}}</a>
+        <a href={{urlWhatsAppAndre}} target='_blank'>62993357679</a>
+        <a href={{urlWhatsAppRamiro}} target='_blank'>62993172731</a>
       </div>
 
       <div class="footer-section-colums">
         <a href="#">Termos & Condições</a>
-        <a href="#">Política de Privacidade</a>
+        <a routerLink="/politica-de-privacidade" routerLinkActive="active" ariaCurrentWhenActive="page">Política de Privacidade</a>
       </div>
     </div>
 </div>
