correções texto de politica e privacidade

--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -1,6 +1,6 @@
 <p>A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus usuários. 
 Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações pessoais quando você visita nosso site 
-https://flashsolucoestech.com.br, ao acessar e usar nosso site, você concorda com os termos descritos abaixo.</p>
+https://flashsolucoestech.com.br, ao acessar e usar nosso site, você concorda com os termos descritos abaixo:</p>
 
 <p>1. Coleta de Dados Pessoais</p>
 <p>Podemos coletar as seguintes informações dos nossos usuários:</p>
