correção texto de politica e privacidade

--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -1,43 +1,48 @@
-<p>A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus usuários. 
-Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações pessoais quando você visita nosso site 
-https://flashsolucoestech.com.br, ao acessar e usar nosso site, você concorda com os termos descritos abaixo:</p>
+<div class="app">
+    <p>A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus usuários.
+    Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações pessoais quando você visita nosso site
+    https://flashsolucoestech.com.br, ao acessar e usar nosso site, você concorda com os termos descritos abaixo:</p>
 
-<p>1. Coleta de Dados Pessoais</p>
-<p>Podemos coletar as seguintes informações dos nossos usuários:</p>
+    <p>1. Coleta de Dados Pessoais</p>
+    <p>Podemos coletar as seguintes informações dos nossos usuários:</p>
 
-<p>Dados Pessoais: Nome, e-mail, telefone, endereço IP, ou qualquer outro dado fornecido por você através de formulários de contato ou inscrição.
-    Dados de Navegação: Informações relacionadas à sua visita, como páginas acessadas, tempo de permanência no site, localização geográfica e outros dados fornecidos por cookies.
-    2. Uso dos Dados
-    Os dados pessoais coletados serão utilizados para:
+    <p>Dados Pessoais: Nome, e-mail, telefone, endereço IP, ou qualquer outro dado fornecido por você através de formulários de contato ou inscrição.</p>
+    <p>Dados de Navegação: Informações relacionadas à sua visita, como páginas acessadas, tempo de permanência no site, localização geográfica e outros dados fornecidos por cookies.</p>
+    
+    <p>2. Uso dos Dados</p>
+    <p>Os dados pessoais coletados serão utilizados para:</p>
 
-    Atendimento ao Cliente: Entrar em contato com você para responder a consultas, fornecer suporte ou enviar informações solicitadas.
-    Melhoria do Site: Analisar o comportamento de navegação para aprimorar a experiência do usuário e otimizar nossos serviços.
-    Marketing: Enviar newsletters, atualizações e ofertas, desde que tenhamos seu consentimento explícito.</p>
+    <p>Atendimento ao Cliente: Entrar em contato com você para responder a consultas, fornecer suporte ou enviar informações solicitadas.</p>
+    <p>Melhoria do Site: Analisar o comportamento de navegação para aprimorar a experiência do usuário e otimizar nossos serviços.</p>
+    <p>Marketing: Enviar newsletters, atualizações e ofertas, desde que tenhamos seu consentimento explícito.</p>
 
-<p>3. Compartilhamento de Informações</p>
+    <p>3. Compartilhamento de Informações</p>
 
-<p>A Lumina Studio não compartilha, vende ou aluga seus dados pessoais a terceiros, exceto:</p>
+    <p>A Lumina Studio não compartilha, vende ou aluga seus dados pessoais a terceiros, exceto:</p>
 
-<p>Quando necessário para cumprir obrigações legais.</p>
-<p>Com prestadores de serviços terceirizados que nos ajudam na operação do site, desde que esses terceiros se comprometam a proteger seus dados.</p>
+    <p>Quando necessário para cumprir obrigações legais.</p>
+    <p>Com prestadores de serviços terceirizados que nos ajudam na operação do site, desde que esses terceiros se comprometam a proteger seus dados.</p>
 
-<p>5. Segurança dos Dados
-Tomamos medidas de segurança adequadas para proteger suas informações contra acesso não autorizado, alteração, divulgação ou destruição. Utilizamos métodos de encriptação e monitoramos regularmente nosso sistema para identificar vulnerabilidades.</p>
+    <p>5. Segurança dos Dados</p>
+    <p>Tomamos medidas de segurança adequadas para proteger suas informações contra acesso não autorizado, alteração, divulgação ou destruição. Utilizamos métodos de encriptação e monitoramos regularmente nosso sistema para identificar vulnerabilidades.</p>
 
-<p>6. Seus Direitos
-Você tem o direito de:
+    <p>6. Seus Direitos</p>
+    <p>Você tem o direito de:</p>
 
-Corrigir ou atualizar dados desatualizados ou incorretos.
-Solicitar a exclusão de seus dados pessoais, quando aplicável.
-Revogar o consentimento para o uso de seus dados a qualquer momento.</p>
+    <p>Corrigir ou atualizar dados desatualizados ou incorretos.</p>
+    <p>Solicitar a exclusão de seus dados pessoais, quando aplicável.</p>
+    <p>Revogar o consentimento para o uso de seus dados a qualquer momento.</p>
 
-<p>7. Links Externos
-Nosso site pode conter links para outros sites de terceiros. Não somos responsáveis pelas práticas de privacidade desses sites, e recomendamos que você leia as políticas de privacidade dos mesmos.</p>
+    <p>7. Links Externos</p>
+    <p>Nosso site pode conter links para outros sites de terceiros. Não somos responsáveis pelas práticas de privacidade desses sites, e recomendamos que você leia as políticas de privacidade dos mesmos.</p>
 
-<p>8. Alterações na Política de Privacidade
-Reservamos o direito de alterar esta Política de Privacidade a qualquer momento. As alterações serão publicadas nesta página com a data de atualização. Recomendamos revisar esta política periodicamente para se manter informado sobre como protegemos seus dados.</p>
+    <p>8. Alterações na Política de Privacidade</p>
+    <p>Reservamos o direito de alterar esta Política de Privacidade a qualquer momento. As alterações serão publicadas nesta página com a data de atualização. Recomendamos revisar esta política periodicamente para se manter informado sobre como protegemos seus dados.</p>
 
-<p>9. Contato</p>
-<p>Se você tiver dúvidas sobre esta Política de Privacidade ou quiser exercer seus direitos relacionados a dados pessoais, entre em contato conosco pelo e-mail: ramirojavadevelopper&#64;gmail.com.</p>
+    <p>9. Contato</p>
+    <p>Se você tiver dúvidas sobre esta Política de Privacidade ou quiser exercer seus direitos relacionados a dados pessoais, entre em contato conosco pelo e-mail: ramirojavadevelopper&#64;gmail.com.</p>
 
-<p>Data da última atualização: 18 de dezembro de 2024</p>
+    <p>Data da última atualização: 18 de dezembro de 2024</p>
+
+    <app-footer/>
+</div>
