--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,13 @@
     font-family: "Reem Kufi", sans-serif !important;
 }
 
+.app {
+    min-height: 100vh;
+    width: 90vw;
+    max-width: 1900px;
+    margin: 0rem auto;
+}
+
 img {
     max-width: 100%;
     height: auto;
