--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -1,48 +1,89 @@
 <div class="app">
-    <p>A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus usuários.
-    Esta Política de Privacidade descreve como coletamos, usamos e protegemos suas informações pessoais quando você visita nosso site
-    https://flashsolucoestech.com.br, ao acessar e usar nosso site, você concorda com os termos descritos abaixo:</p>
+  <h1>Politica de Privacidade</h1>
+  <p>
+    A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus
+    usuários. Esta Política de Privacidade descreve como coletamos, usamos e
+    protegemos suas informações pessoais quando você visita nosso site
+    https://flashsolucoestech.com.br, ao acessar e usar nosso site, você
+    concorda com os termos descritos abaixo:
+  </p>
 
-    <p>1. Coleta de Dados Pessoais</p>
-    <p>Podemos coletar as seguintes informações dos nossos usuários:</p>
+  <h2>Coleta de Dados Pessoais</h2>
 
-    <p>Dados Pessoais: Nome, e-mail, telefone, endereço IP, ou qualquer outro dado fornecido por você através de formulários de contato ou inscrição.</p>
-    <p>Dados de Navegação: Informações relacionadas à sua visita, como páginas acessadas, tempo de permanência no site, localização geográfica e outros dados fornecidos por cookies.</p>
-    
-    <p>2. Uso dos Dados</p>
-    <p>Os dados pessoais coletados serão utilizados para:</p>
+  <p>
+    1. Ao acessar este Site, informações específicas sobre o Usuário, como
+    endereços de protocolo de Internet (IP), navegação no site, software do
+    usuário e tempo de navegação, juntamente com outras informações semelhantes,
+    serão armazenadas nos servidores de Flash Soluções Tech As informações sobre
+    suas identidades, como nome, endereço, detalhes de contato, informações de
+    faturamento e outras informações armazenadas neste site, serão estritamente
+    usadas apenas para fins estatisticos e não serão publicadas para acesso
+    geral. Flash Soluções Tech, no entanto, não assume nenhuma responsabilidade
+    pela segurança dessas informações.
+  </p>
 
-    <p>Atendimento ao Cliente: Entrar em contato com você para responder a consultas, fornecer suporte ou enviar informações solicitadas.</p>
-    <p>Melhoria do Site: Analisar o comportamento de navegação para aprimorar a experiência do usuário e otimizar nossos serviços.</p>
-    <p>Marketing: Enviar newsletters, atualizações e ofertas, desde que tenhamos seu consentimento explícito.</p>
+  <h2>Indenização</h2>
+  <p>
+    2. O usuário concorda em indenizar o Site e suas afiliadas em toda a
+    extensão, frente à todas as ações, reclamações, responsabilidades, perdas,
+    danos, custos, demandas e despesas decorrentes do uso deste Site pelo
+    Usuário, incluindo, sem limitação, qualquer reclamação relacionada à
+    violação de qualquer uma das disposições destes Termos e Condições. Se
+    estiver insatisfeito com algum ou todo o conteúdo deste site ou qualquer um
+    cu todos os seus Termos e Condições, o usuário pode interromper o uso deste
+    site.
+  </p>
+  <p>
+    3. Em qualquer momento, os usuários podem interromper o uso do Site para
+    isso, no site, estão disponiveis as orientações necessárias. Caso ainda
+    fique algum dúvida, não hesite em enviar um e-mail para
+    barbosaandre337&#64;gmail.com
+  </p>
+  <p>
+    4. Nós nos reservamos o direito e critério exclusivo de, e sem aviso prévio
+    ou responsabilidade, negar o acesso e uso do site (incluindo o bloqueio de
+    endereços IP especificos) a qualquer usuário por qualquer motivo, incluindo,
+    mas não se limitando à violação de qualquer representação, garantia ou
+    acordo nestes Termos ou em qualquer lei ou regulamento aplicável.
+  </p>
+  <h2>Disposições Gerais</h2>
 
-    <p>3. Compartilhamento de Informações</p>
+  <p>
+    5. Os Termos e Condições deste site serão regidos e interpretados de acordo
+    com as leis do pais ou estado em que o Site opera. Você, por meio deste, se
+    submete incondicionalmente à jurisdição não exclusiva dos tribunais
+    localizados no Brasil para a resolução de quaisquer disputas
+  </p>
 
-    <p>A Lumina Studio não compartilha, vende ou aluga seus dados pessoais a terceiros, exceto:</p>
+  <p>
+    6. Este Site reserva-se o direito de revisar estes Termos a qualquer momento
+    conforme julgar adequado. Por isso é fundamental que os seus usuários
+    estejam atentos à essas aleterações.
+  </p>
 
-    <p>Quando necessário para cumprir obrigações legais.</p>
-    <p>Com prestadores de serviços terceirizados que nos ajudam na operação do site, desde que esses terceiros se comprometam a proteger seus dados.</p>
+  <p>
+    7. O Site reserva-se o direito de ceder, transferir e subcontratar seus
+    direitos e ou obrigações sob este Acordo sem qualquer notificação ou
+    consentimento prévio necessário. Os usuários não terão permissão para
+    atribuir, transferu ou subcontratar qualquer um de seus direitos elou
+    obrigações sob estes Termos. Além disso, uma pessoa que não seja parte
+    destes Termos e Condições não terá o direito de fazer cumprir qualquer
+    disposição neles contida
+  </p>
 
-    <p>5. Segurança dos Dados</p>
-    <p>Tomamos medidas de segurança adequadas para proteger suas informações contra acesso não autorizado, alteração, divulgação ou destruição. Utilizamos métodos de encriptação e monitoramos regularmente nosso sistema para identificar vulnerabilidades.</p>
+  <p>
+    8. Estes Termos e Condições, incluindo quaisquer avisos legais e isenções de
+    responsabilidade neste site, constituem o acordo completo entre o Site e
+    você em relação ao uso deste site. Em última análise, este Acordo substitui
+    todos os acordos e entendimentos anteriores relativos ao mesmo >
+  </p>
 
-    <p>6. Seus Direitos</p>
-    <p>Você tem o direito de:</p>
+  <p>
+    9. Qualquer dúvida, entre em contato por meio do endereço de e-mail:
+    barbosaandre337&#64;gmail.com
+  </p>
 
-    <p>Corrigir ou atualizar dados desatualizados ou incorretos.</p>
-    <p>Solicitar a exclusão de seus dados pessoais, quando aplicável.</p>
-    <p>Revogar o consentimento para o uso de seus dados a qualquer momento.</p>
+  <p>Data da última atualização: 19 de dezembro de 2024</p>
 
-    <p>7. Links Externos</p>
-    <p>Nosso site pode conter links para outros sites de terceiros. Não somos responsáveis pelas práticas de privacidade desses sites, e recomendamos que você leia as políticas de privacidade dos mesmos.</p>
-
-    <p>8. Alterações na Política de Privacidade</p>
-    <p>Reservamos o direito de alterar esta Política de Privacidade a qualquer momento. As alterações serão publicadas nesta página com a data de atualização. Recomendamos revisar esta política periodicamente para se manter informado sobre como protegemos seus dados.</p>
-
-    <p>9. Contato</p>
-    <p>Se você tiver dúvidas sobre esta Política de Privacidade ou quiser exercer seus direitos relacionados a dados pessoais, entre em contato conosco pelo e-mail: ramirojavadevelopper&#64;gmail.com.</p>
-
-    <p>Data da última atualização: 18 de dezembro de 2024</p>
-
-    <app-footer/>
+  <app-footer />
 </div>
