--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,29 +1,39 @@
 <div class="footer-wrapper">
-    <div class="footer-section-one">
-      <div class="footer-logo-container">
-        <img src="assets/img/logo.svg" alt="logo flash" />
-      </div>
-      <div class="footer-icons">
-        <fa-icon [icon]="faInstagram"></fa-icon>
-        <fa-icon [icon]="faFacebookF"></fa-icon>
-        <fa-icon [icon]="faLinkedin"></fa-icon>
-        <fa-icon [icon]="faTwitter"></fa-icon>
-      </div>
+  <div class="footer-section-one">
+    <div class="footer-logo-container">
+      <img src="assets/img/logo.svg" alt="logo flash" />
+    </div>
+    <div class="footer-icons">
+      <fa-icon [icon]="faInstagram"></fa-icon>
+      <fa-icon [icon]="faFacebookF"></fa-icon>
+      <fa-icon [icon]="faLinkedin"></fa-icon>
+      <fa-icon [icon]="faTwitter"></fa-icon>
+    </div>
+  </div>
+
+  <div class="footer-section-two">
+    <div class="footer-section-colums">
+      <a href="#work">Nosso Trabalho</a>
+      <a href="#evaluation">Avaliação</a>
+    </div>
+    <div class="footer-section-colums">
+      <a href="{{ urlWhatsAppAndre }}" target="_blank">62993357679</a>
+      <a href="{{ urlWhatsAppRamiro }}" target="_blank">62993172731</a>
     </div>
 
-    <div class="footer-section-two">
-      <div class="footer-section-colums">
-        <a href="#work">Nosso Trabalho</a>
-        <a href="#evaluation">Avaliação</a>
-      </div>
-      <div class="footer-section-colums">
-        <a href={{urlWhatsAppAndre}} target='_blank'>62993357679</a>
-        <a href={{urlWhatsAppRamiro}} target='_blank'>62993172731</a>
-      </div>
-
-      <div class="footer-section-colums">
-        <a href="#">Termos & Condições</a>
-        <a routerLink="/politica-de-privacidade" routerLinkActive="active" ariaCurrentWhenActive="page">Política de Privacidade</a>
-      </div>
+    <div class="footer-section-colums">
+      <a
+        routerLink="/termos-e-condicoes"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Termos & Condições</a
+      >
+      <a
+        routerLink="/politica-de-privacidade"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Política de Privacidade</a
+      >
     </div>
+  </div>
 </div>
