--- a/src/app/termos-condicoes/termos-condicoes.component.html
+++ b/src/app/termos-condicoes/termos-condicoes.component.html
@@ -9,7 +9,7 @@
     relacionados. Caso você não concorde ou não tenha ficado claro algum ponto,
     sugere-se que você NÃO NAVEGUE MAIS NELE até que você tenha sanado todas as
     suas dúvidas. Você poderá ainda, a qualquer tempo, retornar ao site, clicar
-    em termos de uso e reler quantas vezes desejar Termos e Condições
+    em termos de uso e reler quantas vezes desejar Termos e Condições.
   </p>
 
   <p>
@@ -70,7 +70,7 @@
     </li>
     <li>
       Realizar mineração de dados ou qualquer outra atividade semelhante
-      relacionada a este site, ou durante o uso deste site, e Usando este site
+      relacionada a este site, ou durante o uso deste site, e usando este site
       para se envolver em qualquer forma de publicidade ou marketing
       empresarial.
     </li>
@@ -105,13 +105,13 @@
     de tais links.
   </p>
 
-  <h2>Links para conteudo de terceiros</h2>
+  <h2>Links para conteúdo de terceiros</h2>
 
   <p>
     10. Este site pode conter links para sites ou aplicativos operados por
     terceiros. Não controlamos nenhum desses sites ou aplicativos de terceiros
     ou o operador de terceiros. Este Site, objeto do presente Termos de Uso não
-    é responsável e não endossa quaisquer sites on aplicativos de terceiros on
+    é responsável e não endossa quaisquer sites ou aplicativos de terceiros ou
     sua disponibilidade ou conteúdo. Flash Soluções Tech não se responsabiliza
     pelos anúncios contidos no site. Você concorda em fazê-le por sua própria
     conta e risco ao adquirir quaisquer bens e/ou serviços de terceiros. O
