--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -1,5 +1,5 @@
 <div class="app">
-  <h1>Politica de Privacidade</h1>
+  <h1>Política de Privacidade</h1>
   <p>
     A Flash Solucões Tech valoriza a privacidade e a proteção dos dados de seus
     usuários. Esta Política de Privacidade descreve como coletamos, usamos e
@@ -29,13 +29,13 @@
     danos, custos, demandas e despesas decorrentes do uso deste Site pelo
     Usuário, incluindo, sem limitação, qualquer reclamação relacionada à
     violação de qualquer uma das disposições destes Termos e Condições. Se
-    estiver insatisfeito com algum ou todo o conteúdo deste site ou qualquer um
-    cu todos os seus Termos e Condições, o usuário pode interromper o uso deste
+    estiver insatisfeito com algum ou todo o conteúdo deste site ou qualquer uma
+    parte dos seus Termos e Condições, o usuário pode interromper o uso deste
     site.
   </p>
   <p>
     3. Em qualquer momento, os usuários podem interromper o uso do Site para
-    isso, no site, estão disponiveis as orientações necessárias. Caso ainda
+    isso, no site, estão disponíveis as orientações necessárias. Caso ainda
     fique algum dúvida, não hesite em enviar um e-mail para
     barbosaandre337&#64;gmail.com
   </p>
@@ -50,32 +50,32 @@
 
   <p>
     5. Os Termos e Condições deste site serão regidos e interpretados de acordo
-    com as leis do pais ou estado em que o Site opera. Você, por meio deste, se
+    com as leis do país ou estado em que o Site opera. Você, por meio deste, se
     submete incondicionalmente à jurisdição não exclusiva dos tribunais
-    localizados no Brasil para a resolução de quaisquer disputas
+    localizados no Brasil para a resolução de quaisquer disputas.
   </p>
 
   <p>
     6. Este Site reserva-se o direito de revisar estes Termos a qualquer momento
     conforme julgar adequado. Por isso é fundamental que os seus usuários
-    estejam atentos à essas aleterações.
+    estejam atentos à essas alterações.
   </p>
 
   <p>
     7. O Site reserva-se o direito de ceder, transferir e subcontratar seus
     direitos e ou obrigações sob este Acordo sem qualquer notificação ou
     consentimento prévio necessário. Os usuários não terão permissão para
-    atribuir, transferu ou subcontratar qualquer um de seus direitos elou
+    atribuir, transferu ou subcontratar qualquer um de seus direitos e ou
     obrigações sob estes Termos. Além disso, uma pessoa que não seja parte
     destes Termos e Condições não terá o direito de fazer cumprir qualquer
-    disposição neles contida
+    disposição neles contida.
   </p>
 
   <p>
     8. Estes Termos e Condições, incluindo quaisquer avisos legais e isenções de
     responsabilidade neste site, constituem o acordo completo entre o Site e
-    você em relação ao uso deste site. Em última análise, este Acordo substitui
-    todos os acordos e entendimentos anteriores relativos ao mesmo >
+    você em relação ao uso deste site. Em última análise, este acordo substitui
+    todos os acordos e entendimentos anteriores relativos ao mesmo.
   </p>
 
   <p>
