--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,12 +3,12 @@
     <div class="footer-logo-container">
       <img src="assets/img/logo.svg" alt="logo flash" />
     </div>
-    <div class="footer-icons">
+    <!--<div class="footer-icons">
       <fa-icon [icon]="faInstagram"></fa-icon>
       <fa-icon [icon]="faFacebookF"></fa-icon>
       <fa-icon [icon]="faLinkedin"></fa-icon>
       <fa-icon [icon]="faTwitter"></fa-icon>
-    </div>
+    </div>-->
   </div>
 
   <div class="footer-section-two">
