adição de texto otimizado para SEO na landpage

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,19 +2,17 @@
     <div class="content-banner-container">
         <div class="content-bannerImage-container"></div>
         <div class="content-text-section">
-            <h1 class="primary-heading">Lorem ipsum dolor sit amet</h1>
+            <h1 class="primary-heading">Seu site bem posiconado no meio digital com a flash.</h1>
             <p class="primary-text">
-                Phasellus fringilla ligula et lectus hendrerit, sed mattis Tellus
-                aliquam. Dito inteiro erat velit, facilisis hendrerit eros comodo
-                molestie. Nada fácil. Nullam nulla arcu, placerat nec sempre sed,
-                euismod ac dui.
+                Alcance muito mais clientes e lucratividade para o seu negócio
+                através de um site profissional feito pela flashsoluçoestech.
             </p>
             <button class="secondary-button">
                 <a href={{urlWhatsApp}} target='_blank'>Fale no whatsapp</a>
             </button>
             <p class="primary-text">
-                Nulla ut ligula vel libero condimentum accumsan nec ac sem. Integer
-                molestie sed mauris eu consectetur.
+                Temos a solução ideal para você com menor custo,
+                desde a criação de uma Landing Page até um Site Corporativo ou E-commerce.
             </p>
         </div>
         <div class="content-image-section">
