--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="navbar-links-container">
-        <a href="#conteudo">Home</a>
+        <a href="#">Home</a>
         <a href="#sobre">Sobre Nós</a>
         <a href="#work">Nosso Trabalho</a>
         <a href="#evaluation">Avaliação</a>
@@ -17,7 +17,7 @@
 </div>
 <div class="dropdown">
   <div id="listdropdown" class="dropdown-content" (click)="manageMenu()" (blur)="manageMenu()">
-    <a href="#conteudo">Home</a>
+    <a href="#">Home</a>
     <a href="#sobre">Sobre Nós</a>
     <a href="#work">Nosso Trabalho</a>
     <a href="#evaluation">Avaliação</a>
