--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,11 +1,11 @@
 <div class="work-section-wrapper">
     <div class="work-section-top">
       <p class="primary-subheading">Nosso Trabalho</p>
-      <h1>Cras eros sem</h1>
+      <h1>Especialidades</h1>
       <p class="primary-text">
-        consectetur vitae arcu vel, pharetra sagittis turpis. Vestíbulo eu
-        mattis mauris, Curabitur sollicitudin efficitur sapien blandit
-        volutpat. Ut ultrices scelerisque justo, non euismod arcu.
+        Temos uma equipe de profissionais especializados esperando por você para colocar a mão na massa
+        e te entregar a melhor solução que venha aumentar sua taxa de conversão de clientes
+        e resultados de vendas pela internet.
       </p>
     </div>
 
