--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,11 +6,9 @@
 }
   
 .about-background-image-container {
-    position: absolute;
-    z-index: -2;
-    object-fit: contain;
-    width: 460px;
-    height: 660px;
+    position: relative;
+    width: 660px;
+    height: 600px;
 }
   
 .about-section-text-container {
@@ -18,7 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: 450px;
+    margin-top: 5rem;
 }
   
 .primary-subheading {
