--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,22 @@
 <div class="about-section-container">
+    <div class="about-background-image-container">
+      <img src="assets/img/imagem_google.png" alt="site bem posicionado" />
+    </div>
     <div class="about-section-text-container">
       <p class="primary-subheading">Sobre Nós</p>
       <h1 class="primary-heading">
-        Nulla vel libero facilisis felis mattis finibus convallis eu sapien.
+        Especialistas em presença digital na internet.
       </h1>
       <p class="primary-text">
-        Aliquam imperdiet et sapiens at ultrices. Morbi a dapibus lectus.
-        Nulla venenatis malesuada nisi efficitur porttitor. Sed egestas dolor
-        eu rutrum sollicitudin
+        A flashsoluçoestech é um studio especializado em criação
+        de Sites Corporativos, E-commerce e Landing Pages.
+        Nosso objetivo é ajudar você a alavancar sua presença na internet
+        com eficiência e com o foco em converter mais clientes para seu negócio.
       </p>
       <p class="primary-text">
-        Nunc justo lectus, porta et mattis a, cursus ut orci. Pellentesque
-        vitae nibh ut enim ultricies pulvinar. Vestibulum ante ipsum primis in
-        faucibus orci luctus et
+        Nosso diferencial esta na forma que atendemos nossos clientes, 
+        sempre estamos dispostos a entender sua necessidade, 
+        de forma que você fique satisfieito com o resultado final do seu projeto.
       </p>
       <div class="about-button-container">
         <!--<button class="secondary-button">Leia Mais</button>
@@ -21,7 +25,5 @@
         </button>-->
       </div>
     </div>
-    <div class="about-background-image-container">
-      <img src="assets/img/imagem_google.png" alt="site bem posicionado" />
-    </div>
+    
 </div>
