--- a/src/app/evaluation/evaluation.component.html
+++ b/src/app/evaluation/evaluation.component.html
@@ -3,17 +3,15 @@
       <p class="primary-subheading">Avaliação</p>
       <h1 class="primary-heading">O que dizem sobre nós</h1>
       <p class="primary-text">
-        Morbi blandit sed ipsum in accumsan. Nullam sollicitudin rhoncus arcu
-        nec accumsan. Mecenas porttitor vehicula purus ut vestibulum.
+        Abaixo temos alguns depoimentos de clientes satisfeitos com nosso trabalho.
       </p>
     </div>
 
     <div class="testemonial-section-botton">
       <img src="assets/img/john-doe-image.png" alt="imagem do avaliador" />
       <p>
-        Donec sit amet blandit sem. Duis euismod nec mauris posuere maximus.
-        Ut tincidunt mollis facilisis. Morbi dictum accumsan odio, um tempus
-        elit bibendum id. Vivamus faucibus ut purus eget luctus.
+        Satisfeito em contratar os serviços da flash, superou minhas espectativas tanto na qualidade do site, 
+        como também na atenção com o pós-venda.  
       </p>
       <div class="testemonial-stars-container">
         <fa-icon [icon]="faStar"></fa-icon>
