--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@ body {
     font-weight: 700;
     color: rgb(53, 126, 126);
     font-size: 3rem;
+    margin-bottom: 2rem;
 }
 
 .work-section-wrapper {
