correção de css e textos

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -28,7 +28,7 @@
   
 .footer-section-two {
     justify-content: center;
-    padding-top: 30px;
+    padding-top: 3rem;
     display: grid;
 }
   
