--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,8 +13,7 @@
 
   <div class="footer-section-two">
     <div class="footer-section-colums">
-      <a href="#work">Nosso Trabalho</a>
-      <a href="#evaluation">Avaliação</a>
+      <a href="#">voltar ao início</a>
     </div>
     <div class="footer-section-colums">
       <a href="{{ urlWhatsAppAndre }}" target="_blank">62993357679</a>
