reutilização de codigo

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,4 @@
 <div class="about-section-container">
-    <div class="about-background-image-container">
-      <img src="assets/img/imagem_google.png" alt="site bem posicionado" />
-    </div>
     <div class="about-section-text-container">
       <p class="primary-subheading">Sobre Nós</p>
       <h1 class="primary-heading">
@@ -13,6 +10,9 @@
         Nosso objetivo é ajudar você a alavancar sua presença na internet
         com eficiência e com o foco em converter mais clientes para seu negócio.
       </p>
+      <button class="secondary-button">
+        <a href={{urlWhatsApp}} target='_blank'>Fale no whatsapp</a>
+      </button>
       <p class="primary-text">
         Nosso diferencial esta na forma que atendemos nossos clientes, 
         sempre estamos dispostos a entender sua necessidade, 
@@ -25,5 +25,7 @@
         </button>-->
       </div>
     </div>
-    
+    <div class="about-background-image-container">
+      <img src="assets/img/imagem_google.png" alt="site bem posicionado" />
+    </div>
 </div>
