--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -31,11 +31,6 @@
     justify-content: center;
     align-items: flex-start;
 }
-   
-.secondary-button a {
-    color: black;
-    text-decoration: none;
-}
 
 
 @media screen and (max-width: 950px) {
@@ -73,9 +68,9 @@
         justify-content: center;
         align-items: flex-start;
     }
-    
-    .secondary-button a {
-        color: black;
-        text-decoration: none;
+
+    .secondary-button a:hover {
+        background-color: rgb(122, 202, 202) !important;
     }
+
 }
