--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,11 @@ body {
     justify-content: center;
 }
   
+.secondary-button a {
+    color: black;
+    text-decoration: none;
+}
+
 .secondary-button:hover {
     background-color: rgb(122, 202, 202);
 }
@@ -69,7 +74,7 @@ body {
 }
 
 .work-section-wrapper {
-    margin-top: 5rem;
+    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -81,4 +86,10 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+@media screen and (max-width: 950px) {
+    .secondary-button:hover {
+        background-color: rgb(122, 202, 202) !important;
+    }
 }
