--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ body {
 }
 
 .secondary-button {
+    width: 18rem;
     padding: 1rem 2.5rem;
     background-color: rgb(49, 138, 138);
     outline: none;
