criação de componente de argumentação

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,6 @@
     <app-content id="conteudo"/>
     <app-about id="sobre" />
     <app-work id="work" />
-    <app-evaluation id="evaluation" />
+    <app-argumentos id="arg" />
     <app-footer/>
 </div>
