--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
         <a href="#">Home</a>
         <a href="#sobre">Sobre Nós</a>
         <a href="#work">Nosso Trabalho</a>
-        <a href="#evaluation">Avaliação</a>
+        <a href="#arg">Site</a>
     </div>
 </nav>
 <div class="container"  (click)="manageMenu()">
@@ -20,6 +20,6 @@
     <a href="#">Home</a>
     <a href="#sobre">Sobre Nós</a>
     <a href="#work">Nosso Trabalho</a>
-    <a href="#evaluation">Avaliação</a>
+    <a href="#arg">Site</a>
   </div>
 </div>
