--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
         com eficiência e com o foco em converter mais clientes para seu negócio.
       </p>
       <button class="secondary-button">
-        <a href={{urlWhatsApp}} target='_blank'>Fale no whatsapp</a>
+        <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
       </button>
       <p class="primary-text">
         Nosso diferencial esta na forma que atendemos nossos clientes, 
