--- a/src/app/argumentos/argumentos.component.html
+++ b/src/app/argumentos/argumentos.component.html
@@ -2,7 +2,8 @@
     <div class="arg-section-top">
       <p class="primary-subheading">Por que ter um site?</p>
       <h1>Vantagens de se ter um site:</h1>
-      <ul>
+    </div>
+    <ul>
         <li>
             <p class="primary-text">
                 Um site permite que você esteja disponível para seus clientes ou público o tempo todo, independentemente do horário ou do dia. 
@@ -22,6 +23,21 @@
                 Isso ajuda a aumentar sua visibilidade online e a atrair mais visitantes.
             </p>
         </li>
-      </ul>
-    </div>
+        <li>
+            <p class="primary-text">
+                Se você tem um negócio, um site pode ser a plataforma para vender seus produtos ou serviços diretamente aos consumidores. 
+                Isso permite que você alcance um mercado mais amplo, com a possibilidade de oferecer uma experiência de compra conveniente e segura.
+            </p>
+        </li>
+        <li>
+            <p class="primary-text">
+                Em mercados competitivos, ter um site pode ser um diferencial importante. Se seus concorrentes já possuem sites, 
+                a ausência de um site pode fazer com que você perca oportunidades de negócios. Por outro lado, 
+                um site bem projetado pode ajudá-lo a se destacar.
+            </p>
+        </li>
+    </ul>
+    <button class="secondary-button">
+        <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
+    </button>
 </div>
