--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -2,13 +2,13 @@
     <div class="content-banner-container">
         <div class="content-bannerImage-container"></div>
         <div class="content-text-section">
-            <h1 class="primary-heading">Seu site bem posiconado no meio digital com a flash.</h1>
+            <h1 class="primary-heading">Seu site bem posiconado na internet com a flash.</h1>
             <p class="primary-text">
                 Alcance muito mais clientes e lucratividade para o seu negócio
                 através de um site profissional feito pela flashsoluçoestech.
             </p>
             <button class="secondary-button">
-                <a href={{urlWhatsApp}} target='_blank'>Fale no whatsapp</a>
+                <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
             </button>
             <p class="primary-text">
                 Temos a solução ideal para você com menor custo,
