--- a/src/app/argumentos/argumentos.component.css
+++ b/src/app/argumentos/argumentos.component.css
@@ -51,6 +51,10 @@
     flex-wrap: wrap;
 }
 
+ul{
+    max-width: 80%;
+}
+
 @media screen and (max-width: 950px) {
     .primary-subheading {
         font-weight: 700;
